Add more endpoints to meet readme minimum requires
